# fullstack-app-template-for-authSDK-service

./: .dockerignore  .gitignore  README.md  compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth_service.py  config.py  main.py  schemas.py
docs/: docker.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  vite-env.d.ts
protected-api/: .env.example  Dockerfile  pyproject.toml
protected-api/app/: __init__.py  config.py  main.py
